syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.responses";
option java_multiple_files = true;

package response_models;

// common
import "common/vector2.proto";
// responses
import "responses/current-canvas-state-response.proto";
import "responses/spell-description-response.proto";
import "responses/game-error.proto";


message SpectateTowerAttackResponse {
  message SelectSpellColor {
    int32 colorId = 1;
  }

  enum ResponseType {
    CURRENT_CANVAS_STATE = 0;
    SELECT_SPELL_COLOR = 1;
    DRAW_SPELL = 2;
    FINISH_SPELL = 3;
  };

  ResponseType responseType = 1;
  int32 sessionId = 2;
  response_models.GameError error = 3;

  // CURRENT_CANVAS_STATE
  response_models.CurrentCanvasStateResponse canvasState = 4;
  // SELECT_SPELL_COLOR
  SelectSpellColor spellColor = 5;
  // DRAW_SPELL
  common.Vector2 spellPoint = 6;
  // FINISH_SPELL
   response_models.SpellDescriptionResponse spellDescription = 7;
};
